--- a/static/style.css
+++ b/static/style.css
@@ -15,8 +15,12 @@ body {
     width: 25%;
 }
 .layout .pin {
+    border-radius: 30px;
     border: 3px solid black;
-    margin: 3px;
+    height: 60px;
+    line-height: 54px;
+    margin: 3px auto;
+    width: 60px;
 }
 .layout .right {
     font-size: 20px;
